--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,2 @@
-discord.py==1.7.3
-dislash.py==1.4.7
+discord.py==2.0.0 # Optionally install discord.py[speed] for better performance
 python-dotenv==0.20.0
